--- a/index.htm
+++ b/index.htm
@@ -50,7 +50,7 @@
 		<!-- Countdown dashboard end -->
 
 		<div class="dev_comment">
-		  Can too much anticipation be unhealthy?<br/> Let's find out, shall we?
+		  Can too much anticipation be unhealthy?<br/> Nah.
 		</div>
 
 		<script language="javascript" type="text/javascript">
