--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8" />
-	<title>Rocky Mountain Retreat Countdown</title>
+	<title>RMR Countdown</title>
 	<link rel="stylesheet" type="text/css" href="style/main.css" />
 	<script type="text/javascript" src="js/jquery-1.4.1.js"></script>
 	<script type="text/javascript" src="js/jquery.lwtCountdown-0.9.5.js"></script>
@@ -11,8 +11,8 @@
 </head>
 <body>
    <div id="container">
-		<h1>Rocky Mountain Game Retreat <span class="foo">2022</span> Countdown</h1>
-		<h2 class="subtitle">No whammies, no whammies....</h2>
+		<h1>Rocky Mountain Game Retreat <span class="foo">2023</span> Countdown</h1>
+		<h2 class="subtitle">Are you packing a chair? Because apparently that's a thing.</h2>
 
 		<!-- Countdown dashboard start -->
 		<div id="countdown_dashboard">
@@ -50,7 +50,7 @@
 		<!-- Countdown dashboard end -->
 
 		<div class="dev_comment">
-		  Can too much anticipation be unhealthy?<br/> Nah.
+		  Are we turning a corner?<br/>It feels like we're turning a corner...
 		</div>
 
 		<script language="javascript" type="text/javascript">
