--- a/index.htm
+++ b/index.htm
@@ -56,7 +56,7 @@
       <!-- Countdown dashboard end -->
 
       <div class="dev_comment">
-        I'm not giddy yet.<br />But I <em>am</em> giddy adjacent.
+        I'm not giddy yet.<br />But I <b>am</b> giddy adjacent.
       </div>
 
       <script language="javascript" type="text/javascript">
