--- a/index.htm
+++ b/index.htm
@@ -15,10 +15,10 @@
   <body>
     <div id="container">
       <h1>
-        Rocky Mountain Game Retreat <span class="foo">2023</span> Countdown
+        Rocky Mountain Game Retreat <span class="foo">2024</span> Countdown
       </h1>
       <h2 class="subtitle">
-        Are you packing a chair? Because apparently that's a thing.
+        I asked ChatGPT to write this for me, but it didn't know what RMR was. Yet.
       </h2>
 
       <!-- Countdown dashboard start -->
@@ -56,7 +56,7 @@
       <!-- Countdown dashboard end -->
 
       <div class="dev_comment">
-        I'm not giddy yet.<br />But I <b>am</b> giddy adjacent.
+        Let's dance.
       </div>
 
       <script language="javascript" type="text/javascript">
