--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
         Rocky Mountain Game Retreat <span class="foo">2024</span> Countdown
       </h1>
       <h2 class="subtitle">
-        I asked ChatGPT to write this for me, <br/> but it didn't know what RMR was.<br/> Yet.
+        I asked ChatGPT to write this for me, but it didn't know what RMR was.<br/> Yet.
       </h2>
 
       <!-- Countdown dashboard start -->
