--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
   <body>
     <div id="container">
       <h1>
-        Rocky Mountain Game Retreat <span class="foo">2024</span> Countdown
+        Rocky Mountain Retreat <span class="foo">2024</span> Countdown
       </h1>
       <h2 class="subtitle">
         I asked ChatGPT to write this for me, but it didn't know what RMR was.<br/> Yet.
