--- a/index.htm
+++ b/index.htm
@@ -15,10 +15,10 @@
   <body>
     <div id="container">
       <h1>
-        Rocky Mountain Retreat <span class="foo">2024</span> Countdown
+        Rocky Mountain Retreat <span class="foo">2025</span> Countdown
       </h1>
       <h2 class="subtitle">
-        I asked ChatGPT to write this for me, but it didn't know what RMR was.<br/> Yet.
+        Moving the RMR into April has provided us an extra 54 minutes of daylight. <br> Which we'll choose to ignore.
       </h2>
 
       <!-- Countdown dashboard start -->
@@ -56,16 +56,16 @@
       <!-- Countdown dashboard end -->
 
       <div class="dev_comment">
-        Let's dance.
+        Please game irresponsibly. 
       </div>
 
       <script language="javascript" type="text/javascript">
         jQuery(document).ready(function () {
           $("#countdown_dashboard").countDown({
             targetDate: {
-              day: 21,
-              month: 3,
-              year: 2024,
+              day: 3,
+              month: 4,
+              year: 2025,
               hour: 13,
               min: 30,
               sec: 0,
