--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
         Rocky Mountain Retreat <span class="foo">2025</span> Countdown
       </h1>
       <h2 class="subtitle">
-        Moving the RMR into April has provided us an extra 54 minutes of daylight. <br> Which we'll choose to ignore.
+        Moving the RMR into April has provided us an extra 54 minutes of daylight. <br> Of course, nobody is looking out windows, so....
       </h2>
 
       <!-- Countdown dashboard start -->
