--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>RMR Countdown</title>
+    <title>RMR 2026 Countdown</title>
     <link rel="stylesheet" type="text/css" href="style/main.css" />
     <script type="text/javascript" src="js/jquery-1.4.1.js"></script>
     <script
@@ -14,11 +14,11 @@
   </head>
   <body>
     <div id="container">
-      <h1>
-        Rocky Mountain Retreat <span class="foo">2025</span> Countdown
-      </h1>
+      <h1>Rocky Mountain Retreat <span class="foo">2025</span> Countdown</h1>
       <h2 class="subtitle">
-        Moving the RMR into April has provided us an extra 54 minutes of daylight. <br> Of course, nobody is looking out windows, so....
+        Moving the RMR into April has provided us an extra 54 minutes of
+        daylight. <br />
+        Of course, nobody is looking out windows, so....
       </h2>
 
       <!-- Countdown dashboard start -->
@@ -55,9 +55,7 @@
       </div>
       <!-- Countdown dashboard end -->
 
-      <div class="dev_comment">
-        Please game irresponsibly. 
-      </div>
+      <div class="dev_comment">Please game irresponsibly.</div>
 
       <script language="javascript" type="text/javascript">
         jQuery(document).ready(function () {
