--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div id="container">
-      <h1>Rocky Mountain Retreat <span class="foo">2025</span> Countdown</h1>
+      <h1>Rocky Mountain Retreat <span class="foo">2026</span> Countdown</h1>
       <h2 class="subtitle">
         Moving the RMR into April has provided us an extra 54 minutes of
         daylight. <br />
@@ -55,7 +55,10 @@
       </div>
       <!-- Countdown dashboard end -->
 
-      <div class="dev_comment">Please game irresponsibly.</div>
+      <div class="dev_comment">
+        Remember to warm up before every game. None of us are getting any
+        younger.
+      </div>
 
       <script language="javascript" type="text/javascript">
         jQuery(document).ready(function () {
