--- a/index.htm
+++ b/index.htm
@@ -56,7 +56,7 @@
       <!-- Countdown dashboard end -->
 
       <div class="dev_comment">
-        Remember to warm up before every game. None of us are getting any
+        Remember to warm up before every game.<br />None of us are getting any
         younger.
       </div>
 
