--- a/index.htm
+++ b/index.htm
@@ -15,12 +15,8 @@
   <body>
     <div id="container">
       <h1>Rocky Mountain Retreat <span class="foo">2026</span> Countdown</h1>
-      <h2 class="subtitle">
-        Moving the RMR into April has provided us an extra 54 minutes of
-        daylight. <br />
-        Of course, nobody is looking out windows, so....
-      </h2>
-
+      <h2 class="subtitle"></h2>
+      Retreat?!? Never!!!
       <!-- Countdown dashboard start -->
       <div id="countdown_dashboard">
         <div class="dash weeks_dash">
@@ -56,8 +52,7 @@
       <!-- Countdown dashboard end -->
 
       <div class="dev_comment">
-        Remember to warm up before every game.<br />None of us are getting any
-        younger.
+        Remember to warm up before every game so you don't strain something.
       </div>
 
       <script language="javascript" type="text/javascript">
