--- a/index.htm
+++ b/index.htm
@@ -15,8 +15,8 @@
   <body>
     <div id="container">
       <h1>Rocky Mountain Retreat <span class="foo">2026</span> Countdown</h1>
-      <h2 class="subtitle"></h2>
-      Retreat?!? Never!!!
+      <h2 class="subtitle">Retreat?!? Never!!!</h2>
+
       <!-- Countdown dashboard start -->
       <div id="countdown_dashboard">
         <div class="dash weeks_dash">
