--- a/index.htm
+++ b/index.htm
@@ -53,6 +53,8 @@
 
       <div class="dev_comment">
         Remember to warm up before every game so you don't strain something.
+        <br />
+        <bold>Nobody</bold> wants to see your strained things.
       </div>
 
       <script language="javascript" type="text/javascript">
