--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
   <body>
     <div id="container">
       <h1>Rocky Mountain Retreat <span class="foo">2026</span> Countdown</h1>
-      <h2 class="subtitle">Retreat?!? Never!!!</h2>
+      <h2 class="subtitle">Retreat?!?<br />!!!</h2>
 
       <!-- Countdown dashboard start -->
       <div id="countdown_dashboard">
